<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pin_ball_menu_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/pin_ball_menu_title"
        android:textColor="@color/pin_ball_menu_text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/pin_ball_menu_btn_background"
        android:gravity="center"
        android:onClick="StartGame"
        android:text="@string/pin_ball_menu_btn2"
        android:textColor="@color/pin_ball_menu_btn_text" />

    <Button
        android:id="@+id/buttonScoreList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/pin_ball_menu_btn_background"
        android:gravity="center"
        android:text="@string/pin_ball_menu_btn3"
        android:textColor="@color/pin_ball_menu_btn_text" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/pin_ball_menu_btn_background"
        android:gravity="center"
        android:onClick="AboutGame"
        android:text="@string/pin_ball_menu_btn4"
        android:textColor="@color/pin_ball_menu_btn_text" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/pin_ball_menu_btn_background"
        android:gravity="center"
        android:onClick="ExitGame"
        android:text="@string/pin_ball_menu_btn5"
        android:textColor="@color/pin_ball_menu_btn_text" />

</LinearLayout>
